
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

(1.1.5b) 2023-11-14
# Added
Tutorials:
- Tutorial 1 now also discusses plotting points and observations
- Tutorial 4 now also discusses the extend of the plot and how to adjust it manually.

# Fixed
- https://github.com/TNO/PySub/issues/7
- https://github.com/TNO/PySub/issues/8

(1.1.5) 2023-03-14
# Changed
- Functions plotting cross sections no longer also plot the map with the lines
- New function to plot lines on a map:
	plot_utils.plot_map_with_line
- Selecting extend of model is made easier with the bounds option in build_model variants

(1.1.4) 2023-01-12
# Changed
- Better handling of polygons (shapely based object)
- pyproj to handle projections instead of necesarry internet connection with epsg

# Fixed
- https://github.com/TNO/PySub/issues/5
- https://github.com/TNO/PySub/issues/4
- https://github.com/TNO/PySub/issues/3
- https://github.com/TNO/PySub/issues/2
- https://github.com/TNO/PySub/issues/1

(1.1.3) 2022-11-18
# Added
- Examples
- yaml file for environment

# Changed
- Documentation

# Fixed
- Loading backgrounds

(1.1.2) 2022-10-25
# Added
- Analytical method of determining gradients
- Compaction models that are not linear can be set to linear by setting specific variables to 0
- Installation instructions and addition examples
- Maps can be added to plot with plot_utils.add_background()
- Additional shapes can be added to plots

# Fixed
- Neater code when regarding salt
- Unnecessary memory use better managed
- Some bugs
- Reverted ratetype to parallelized numba jitted code for speed
- Plots only use unique geometry entries
- better CRS management

(1.1.1) 2022-08-30
## Fixed
- Order of scattered points
- Discrepency between order of assigning colors to errorbars and timeseries
- Titles of plot function with multiple figures
- Additional shapes issues