@@ -375,8 +375,69 @@
    "id": "8fc75f08",
    "metadata": {},
    "source": [
-    "Note that the title has been changed by setting the title variable."
+    "Note that the title has been changed by setting the title variable.\n",
+    "\n",
+    "# Plotting points on a map\n",
+    "You can add points on the map in many ways. See variable points here:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5c7a430",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(plot.plot_points_on_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e483320b",
+   "metadata": {},
+   "source": [
+    "These can be your model.observation_points or your model.points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40060a6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot.plot_points_on_map(Model, Model.points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5b7b70d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot.plot_points_on_map(Model, Model.observation_points, scatter_kwargs = {\"marker\": \"^\", \"fc\": \"r\", \"ec\":\"k\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6394cf2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "point_1 = [215000, 570345]\n",
+    "point_2 = [214852, 565000]\n",
+    "plot.plot_points_on_map(Model, [point_1, point_2], labels = [\"point 1\", \"point 2\"], scatter_kwargs = {\"marker\": \"^\", \"fc\": \"r\", \"ec\":\"k\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c4c0a1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
